# container_templates

./: Dockerfile  README.md  devcontainer.json
uv_cuda12.6_pytorch_template/: README.md  pyproject.toml
uv_cuda12.6_pytorch_template/.devcontainer/: Dockerfile  devcontainer.json
